# comfyui-agent

./: .dockerignore  .env.example  .gitignore  AGENT_TEAM_BLUEPRINT.md  BUILD_QUEUE.md  CHANGELOG.md  CLAUDE.md  COGNITIVE_COMFYUI_ARCHITECTURE.md  COGNITIVE_COMFYUI_CLAUDE_CODE_LAUNCH.md  COUNCIL_DECISIONS.md  DEPLOY_NOTES.md  DISPATCH_PROFILERX.md  Dockerfile  EXECUTION_SPEC.md  MIGRATION_MAP.md  MIGRATION_MAP_2026-04-07.md  MISSION_verify_and_refine.md  MOE_ARCHITECTURE.md  PANEL_DESIGN.md  PHASE_0_5_PACKAGING_FIX_DESIGN.md  PHASE_7_CREATIVE_DIRECTION.md  PHASE_STATUS_REPORT.md  PRODUCT_VISION.md  QUICKSTART.md  README.md  RUN_INSIDE_OUT_PASS.md  SCAFFOLDED_BRAIN_AGENT_BLUEPRINT.md  SCAFFOLDED_BRAIN_PLAN.md  SESSION_CAPSULE.md  SETUP_GUIDE.md  STRATEGY.md  SYSTEM_DESIGN_REVIEW.md  TRACK_A_DESIGN.md  _find_comfyui.ps1  docker-compose.yml  pyproject.toml  requirements.txt
.claude/: dispatch-phase5b.md  settings.json  settings.local.json  v2-status.json
.claude/commands/: COMFY_LEAD.md  NUKE_COMP.md  PRODUCER.md  PRODUCTION_HARDEN.md  QUICKSTART.md  SYS_ENG.md  VFX_SUPER.md  bootstrap_hardening.py  orchestrate.py
.github/workflows/: ci.yml
agent/: __init__.py  _util_freeze.py  circuit_breaker.py  cli.py  config.py  degradation.py  errors.py  health.py  logging_config.py  main.py  mcp_server.py  queue_progress.py  rate_limiter.py  session_context.py  startup.py  system_prompt.py  tool_scope.py  workflow_observation.py  workflow_observation_log.py  workflow_session.py
agent/agents/: __init__.py  intent_agent.py  router.py  verify_agent.py
agent/brain/: __init__.py  _protocol.py  _sdk.py  demo.py  intent_collector.py  iteration_accumulator.py  iterative_refine.py  memory.py  optimizer.py  orchestrator.py  planner.py  vision.py
agent/gate/: __init__.py  checks.py  pre_dispatch.py  risk_levels.py
agent/harness/: __init__.py  cli_callables.py  cozy_loop.py
agent/integrations/: __init__.py  moneta.py
agent/knowledge/: 3d_camera_pipeline.md  3d_partner_nodes.md  3d_workflows.md  audio_workflows.md  comfyui_core.md  common_recipes.md  controlnet_patterns.md  flux_specifics.md  video_workflows.md  workflow_optimization.md
agent/llm/: __init__.py  _anthropic.py  _base.py  _gemini.py  _ollama.py  _openai.py  _types.py
agent/memory/: session.py
agent/profiles/: __init__.py  _schema.yaml  default_dit.yaml  default_unet.yaml  default_video.yaml  flux1-dev.yaml  loader.py  sdxl-base.yaml
agent/schemas/: __init__.py  generator.py  loader.py
agent/stage/: __init__.py  anchors.py  arbiter.py  autoresearch_runner.py  cognitive_stage.py  compositor.py  compositor_tools.py  constitution.py  counterfactuals.py  creative_profiles.py  cwm.py  experience.py  foresight_tools.py  hyperagent.py  hyperagent_tools.py  injection.py  model_registry.py  moe_dispatcher.py  moe_profiles.py  morning_report.py  mutation_bridge.py  program_parser.py  provision_tools.py  provisioner.py  ratchet.py  scene_conditioner.py  scene_validator.py  stage_tools.py  workflow_mapper.py  workflow_signature.py
agent/templates/: img2img.json  txt2img_lora.json  txt2img_sd15.json  txt2img_sdxl.json
agent/testing/: __init__.py  adversarial.py
agent/tools/: __init__.py  _util.py  auto_wire.py  capability_defaults.py  capability_registry.py  civitai_api.py  comfy_api.py  comfy_discover.py  comfy_execute.py  comfy_inspect.py  comfy_provision.py  github_releases.py  image_metadata.py  model_compat.py  node_replacement.py  pipeline.py  provision_pipeline.py  session_tools.py  verify_execution.py  workflow_parse.py  workflow_patch.py  (+1 more)
cognitive/: __init__.py
docs/: COMFYUI_AGENT_DESIGN_SYSTEM.md
panel/: __init__.py
scripts/: comfyui_with_agent.bat  deploy.py  setup.py  validate_project.py
tests/: conftest.py  test_3d_demos.py  test_adapters.py  test_adversarial.py  test_anchors.py  test_arbiter.py  test_auto_wire.py  test_autoresearch_runner.py  test_brain_demo.py  test_brain_integration.py  test_brain_intent_collector.py  test_brain_iteration_accumulator.py  test_brain_iterative_refine.py  test_brain_memory.py  test_brain_optimizer.py  test_brain_orchestrator.py  test_brain_planner.py  test_brain_protocol.py  test_brain_sdk.py  test_brain_vision.py  test_capability_registry.py  test_circuit_breaker.py  test_civitai_api.py  test_cognitive_core.py  test_cognitive_experience.py  test_cognitive_pipeline.py  test_cognitive_prediction.py  test_cognitive_stage.py  test_cognitive_tools.py  test_cognitive_transport.py  test_comfy_api.py  test_comfy_discover.py  test_comfy_execute.py  test_comfy_inspect.py  test_comfy_provision.py  test_compositor.py  test_compositor_tools.py  test_config.py  test_conn_ctx.py  test_constitution.py  (+82 more)
ui/: __init__.py
video-recreation-agent/: CLAUDE.md  INSTALL.md  SETUP_GUIDE.md  test_setup.py
(+114 files in other folders)
