[project]
name = "comfyui-agent"
version = "0.1.0"
description = "AI co-pilot for ComfyUI — inspect, discover, pilot, verify"
readme = "README.md"
license = {text = "MIT"}
authors = [{name = "Joseph Ibrahim"}]
requires-python = ">=3.10"
dependencies = [
    "anthropic>=0.52.0",
    "jsonpatch>=1.33",
    "jsonschema>=4.20.0",
    "httpx>=0.27.0",
    "websockets>=12.0",
    "python-dotenv>=1.0.0",
    "typer>=0.12.0",
    "rich>=13.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.3.0",
]

[project.scripts]
agent = "agent.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["agent"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 99
