[project]
name = "comfyui-agent"
version = "0.4.0"
description = "AI co-pilot for ComfyUI — inspect, discover, modify, and execute workflows through natural conversation"
readme = "README.md"
license = {text = "MIT"}
authors = [{name = "Joseph Ibrahim"}]
requires-python = ">=3.10"
keywords = ["comfyui", "ai-agent", "stable-diffusion", "workflow", "anthropic", "claude"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Multimedia :: Graphics",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "anthropic>=0.52.0",
    "jsonpatch>=1.33",
    "jsonschema>=4.20.0",
    "httpx>=0.27.0",
    "websockets>=12.0",
    "python-dotenv>=1.0.0",
    "typer>=0.12.0",
    "rich>=13.0.0",
    "mcp>=1.2.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.3.0",
]

[project.urls]
Homepage = "https://github.com/JosephOIbrahim/comfyui-agent"
Repository = "https://github.com/JosephOIbrahim/comfyui-agent"
Issues = "https://github.com/JosephOIbrahim/comfyui-agent/issues"

[project.scripts]
agent = "agent.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["agent"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 99
